Fixed spacing with paragraph at end.

--- a/css/main.css
+++ b/css/main.css
@@ -62,6 +62,7 @@ p
     padding: 10px;
     margin-right: 5%;
     margin-left: 5%;
+    line-height: 150%;
 }
 
 table {
